crates/agm-core/tests/snapshots/renderer_snapshots__render_canonical_minimal.snap
---
source: crates/agm-core/tests/renderer_snapshots.rs
expression: output
---
agm: 1.0
package: test.json.minimal
version: 0.1.0

node test.json.node
type: facts
summary: a minimal node for JSON output testing
items: [item_one]
