crates/agm-core/tests/snapshots/renderer_snapshots__render_json_canonical_minimal.snap
---
source: crates/agm-core/tests/renderer_snapshots.rs
expression: output
---
{
  "agm": 1,
  "nodes": [
    {
      "items": [
        "item_one"
      ],
      "node": "test.json.node",
      "summary": "a minimal node for JSON output testing",
      "type": "facts"
    }
  ],
  "package": "test.json.minimal",
  "version": "0.1.0"
}
