crates/agm-core/tests/snapshots/renderer_snapshots__render_markdown_minimal.snap
---
source: crates/agm-core/tests/renderer_snapshots.rs
expression: output
---
# test.json.minimal v0.1.0

## Facts

### `test.json.node`

a minimal node for JSON output testing

#### Items

- item_one

---
