crates/agm-core/tests/snapshots/renderer_snapshots__render_mermaid_auth_platform.snap
---
source: crates/agm-core/tests/renderer_snapshots.rs
expression: output
---
graph LR
    auth_stack["auth.stack<br/>[facts]"]
    auth_constraints["auth.constraints<br/>[rules]"]
